Solved issues
Solved issues reported by fwolter and changed a lot of code, based on the comments.

Signed-off-by: QbusKoen <ks@qbus.be>

	modified:   CODEOWNERS

Signed-off-by: QbusKoen <ks@qbus.be>
Signed-off-by: Koen Schockaert <ks@qbus.be>